ストップウォッチ

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width.initial-scale=1">
 
     <title>お弁当屋さん</title>
 
@@ -24,7 +23,7 @@
 
     <hr class="w-50 my-3">
     <div>
-        <h5 id="name">お弁当-上</h5>
+        <h5 id="name">お弁当 -上-</h5>
         <p><span id="price">2000</span>円</p>
     </div>
 
